# trading-news-analysis

./: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
src/app/: __init__.py  main.py
src/app/api/: v1.py
src/app/core/: config.py
src/app/services/: sentiment.py
tests/: test_api.py
